<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clWinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.winner.WinnerActivity">


    <TextView
        android:id="@+id/txtWinnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Selection_main"
        android:text="@string/txt_winner_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivWinnerPokemon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding_Selection_main"
        app:layout_constraintBottom_toTopOf="@+id/txtWinnerSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWinnerTitle"
        app:srcCompat="@drawable/cubone"
        android:contentDescription="@string/iv_winner_description" />

    <TextView
        android:id="@+id/txtWinnerSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_Selection_main"
        android:text="@string/rb_Selection_cubone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>