<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBattle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.battle.BattleActivity">

    <LinearLayout
        android:id="@+id/llBattleTopRectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/green_50"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:padding="@dimen/padding_Selection_pokemon"
            android:id="@+id/ivBattleFirstPokemon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/gyarados"
            android:contentDescription="@string/iv_battle_first_pokemon_description"/>

        <TextView
            android:id="@+id/txtBattleFirstPokemonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/rb_Selection_gyarados"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBattleMiddleRectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple_50"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBattleTopRectangle">

        <TextView
            android:id="@+id/txtBattleSecondPokemonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/rb_Selection_gyarados"
            android:gravity="center"
            />

        <ImageView
            android:padding="@dimen/padding_Selection_pokemon"
            android:id="@+id/ivBattleSecondPokemon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/gyarados"
            android:contentDescription="@string/iv_battle_second_pokemon_description"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <ImageView
        android:id="@+id/ivBattle"
        android:layout_width="96dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/llBattleMiddleRectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/llBattleTopRectangle"
        app:srcCompat="@drawable/versus"
        android:contentDescription="@string/iv_battle_vs_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_Selection_main"
        android:layout_marginEnd="@dimen/padding_Selection_main"
        android:text="@string/txt_battle_instructions"

        app:layout_constraintBottom_toTopOf="@+id/btnBattleLaunchBattle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBattleMiddleRectangle" />

    <Button
        android:id="@+id/btnBattleLaunchBattle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_Selection_main"
        android:text="@string/btn_battle_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>